# Build-with-Gemma---Humor-Genome

./: .env.example  .gitignore  HACKATHON_PLAN_RU.md  README.md  pyproject.toml
app/: __init__.py  api.py  cli.py  config.py  feedback.py  gemma.py  pipeline.py  schemas.py  validation.py
app/prompts/: __init__.py  analyze_v1.txt  baseline_v1.txt  compare_v1.txt  mutate_v1.txt  teacher_audit_v1.txt
app/static/: app.js  index.html  styles.css
docs/: Build with Gemma- Humor Genome NYC Build AI systems that understand, generate, and enhance humor through human-AI collaboration - description.docx  Room Sense Live - reference.docx
evaluation/: BENCHMARK_LOG.md  DATASET_CARD.md  README.md  __init__.py  compare_models.py  examples.jsonl  run_baseline.py  run_smoke.py  run_teacher_audit.py  summarize_results.py  summarize_teacher_audit.py  validate_dataset.py
tests/: test_api.py  test_evaluation.py  test_feedback.py  test_gemma.py  test_pipeline.py  test_schemas.py  test_validation.py
